<?xml version="1.0" encoding="UTF-8"?>
<!--
 * The contents of this file are subject to the terms of the Common Development and
 * Distribution License (the License). You may not use this file except in compliance with the
 * License.
 *
 * You can obtain a copy of the License at legal/CDDLv1.0.txt. See the License for the
 * specific language governing permission and limitations under the License.
 *
 * When distributing Covered Software, include this CDDL Header Notice in each file and include
 * the License file at legal/CDDLv1.0.txt. If applicable, add the following below the CDDL
 * Header, with the fields enclosed by brackets [] replaced by your own identifying
 * information: "Portions copyright [year] [name of copyright owner]".
 *
 * Copyright 2023 ForgeRock AS.
 *
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <artifactId>est-node</artifactId>

    <groupId>org.forgerock.am.iot</groupId>
    <version>1.0.0-SNAPSHOT</version>
    <name>EST authentication node maven project</name>

    <properties>
        <am.version>7.3.0</am.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <auto-service.version>1.0.1</auto-service.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>UTF-8</encoding>
                    <!-- Override Enforcer Rules for OpenAM Compilation -->
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
                        <arg>-Xpkginfo:always</arg>
                    </compilerArgs>
                    <showDeprecation>false</showDeprecation>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.auto.service</groupId>
                            <artifactId>auto-service</artifactId>
                            <version>${auto-service.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <extensions>true</extensions>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.forgerock.am</groupId>
                <artifactId>openam-auth-trees</artifactId>
                <type>pom</type>
                <scope>import</scope>
                <version>${am.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.forgerock.am</groupId>
            <artifactId>auth-node-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.forgerock.am</groupId>
            <artifactId>openam-guice-core</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.forgerock.am</groupId>
            <artifactId>openam-core</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.forgerock.am</groupId>
            <artifactId>service-config-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.forgerock.am</groupId>
            <artifactId>customer-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.forgerock.am</groupId>
            <artifactId>identity-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk15on</artifactId>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>forgerock-private-releases</id>
            <name>ForgeRock Private Release Repository</name>
            <url>https://maven.forgerock.org/repo/private-releases</url>
        </repository>
    </repositories>

</project>
